[package]
name = "blank"
version = "0.1.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
description = "A blank screen for illumination"
edition = "2021"

[dependencies]
winit = "0.23"
cocoa =  "0.24"
temperagb = { path = "../temperagb" }

[package.metadata.bundle]
name = "Blank"
identifier = "com.mflima.blank"
icon = [ "res/icon*.png" ]
version = "0.1.0"
category = "public.app-category.utilities"
short_description = "A blank screen for illumination"
