[package]
name = "blank"
version = "0.1.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
description = "A blank screen for illumination"
edition = "2021"

[dependencies]
cocoa = "0.24"
tempergb = "0.1"
winit = { version = "0.27", "default-features" = false }

[package.metadata.bundle]
name = "Blank"
identifier = "com.mflima.blank"
icon = [ "res/icon*.png" ]
version = "0.1.0"
category = "public.app-category.utilities"
short_description = "A blank screen for illumination"
