[package]
name = "blank"
version = "0.1.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
description = "A blank screen for illumination"
edition = "2021"

[dependencies]
cocoa = "0.25.0"
nosleep = "0.2.1"
tempergb = "0.1.2"
winit = { version = "0.28.6", "default-features" = false }

[package.metadata.bundle]
name = "Blank"
identifier = "com.mflima.blank"
icon = [ "res/icon*.png" ]
version = "0.1.0"
category = "public.app-category.utilities"
short_description = "A blank screen for illumination"
